objects/Settings__mdt/Settings__mdt.object-meta.xml
<CustomObject>
    <label>Settings</label>
    <pluralLabel>Settings</pluralLabel>
</CustomObject>