objects/Settings__mdt/fields/Org_Specific__c.field-meta.xml
<CustomField>
    <fullName>Org_Specific__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the value of this setting is specific each Org and cannot be used in other orgs. This means, when sandbox is refreshed, settings with these values must be cleared.</inlineHelpText>
    <label>Org Specific</label>
    <type>Checkbox</type>
</CustomField>