objects/Settings__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <inlineHelpText>Data type of this setting. At this time, type is for informational purpose only. Set the value in the format consistent with the Type</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>String</fullName>
                <default>true</default>
                <label>String</label>
            </value>
            <value>
                <fullName>Boolean</fullName>
            </value>
            <value>
                <fullName>Integer</fullName>
            </value>
            <value>
                <fullName>Decimal</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>DateTime</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Map</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>